fix: Fix the content overflow error on the main page.

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,11 +1,20 @@
 #home-h1{
-    color: #333
+    color: #333;
 }
-
+#home-section{
+    display: flex;
+    flex-direction: column;
+    max-height: 100%;
+}
+#home-section > :last-child{
+    overflow-y: scroll;
+    max-height: 100%;
+}
 #home-table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
+
 }
 th, td {
     border: 1px solid #ddd; /* Borda cinza */
